--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html, body {
 
 body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color: #212F3C;
+    color: #194C66;
     user-select: none;
 }
 
@@ -42,7 +42,7 @@ body {
 
 #full-loading > .box > .label {
     font-size: 36px;
-    color: #F1C40F;
+    color: #194C66;
     font-weight: bold;
 }
 
@@ -66,7 +66,7 @@ body {
 }
 
 .page > .main > header {
-    background-color: #F1C40F;
+    background-color: #194C66;
     box-shadow: 0 0 10px rgb(0 0 0 / 39%);
     z-index: 99;
     display: flex;
@@ -95,16 +95,17 @@ body {
 ul.switch-mode {
     padding: 0;
     margin: 0;
-    background-color: #B7950B;
+    background-color: #9F9F9F;
     border-radius: 100px;
     display: flex;
     flex-direction: row;
-    padding: 6px;
+    padding: 4px;
+    border: 2px solid #F2D388;
 }
 
 ul.switch-mode > li {
     list-style: none;
-    padding: 10px 16px;
+    padding: 8px 14px;
     color: #FFF;
     cursor: pointer;
     transition: background-color 300mS;
@@ -112,8 +113,8 @@ ul.switch-mode > li {
 }
 
 ul.switch-mode > li.active {
-    background-color: #FFF;
-    color: #B7950B;
+    background-color: #F2D388;
+    color: #FFF;
 }
 
 .embed ul.switch-mode {
@@ -150,16 +151,20 @@ ul.top-bar-button > li > button {
     width: 40px;
     height: 40px;
     font-size: 20px;
-    color: #FFF;
+    color: #194C66;
     outline: none;
     border-radius: 500px;
-    background-color: #B7950B;
+    background-color: #FFF;
     border: none;
     margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
 }
 
 ul.top-bar-button > li > button:hover {
-    background-color: #9A7D0A;
+    background-color: #FFF;
 }
 
 .embed ul.top-bar-button {
@@ -270,9 +275,13 @@ ul.switch-mode > li:last-child {
 .blocklyTreeRowContentContainer > .blocklyTreeLabel {
     text-align: center;
     font-size: 14px;
-    padding: 6px;
+    padding: 6px 0;
     padding-bottom: 10px;
     padding-top: 0;
+    border-bottom: 2px solid #194C66;
+    margin-left: 8px;
+    margin-right: 8px;
+    font-weight: bold;
 }
 
 #blocks-editor > .work-box {
@@ -301,7 +310,7 @@ ul.switch-mode > li:last-child {
 
 .page > .main > footer > .control-box {
     padding: 14px 30px;
-    background-color: #212F3C;
+    background-color: #194C66;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -330,23 +339,21 @@ ul.switch-mode > li:last-child {
     font-size: 22px;
     margin-right: 14px;
     border: none;
-    background-color: #34495E;
-    color: #FFF;
-}
-
-.page > .main > footer > .control-box > ul.button-list > li > button > div {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 500px;
-    overflow: hidden;
+    background-color: #FFF;
+    color: #194C66;
+    padding: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.page > .main > footer > .control-box > ul.button-list > li > button > img {
+    max-width: 100%;
+    height: auto;
+}
+
+.page > .main > footer > .control-box > ul.button-list > li > button#open-note > img {
+    max-height: 90%;
 }
 
 .page > .main > footer > .control-box > ul.button-list > li > input {
@@ -359,25 +366,42 @@ ul.switch-mode > li:last-child {
     outline: none;
     text-align: center;
     transition: border 300mS, width 300mS;
-    border: 2px solid #212F3C;
+    border: 2px solid #194C66;
     width: 140px;
 }
 
 .page > .main > footer > .control-box > ul.button-list > li > input:focus {
-    border: 2px solid #34495E;
+    /* border: 2px solid #FFF; */
     width: 200px;
 }
 
 .page > .main > footer > .control-box > ul.button-list > li > button:hover {
-    background-color: #2E4053;
+    background-color: #FFF;
 }
 
-.page > .main > footer > .control-box > ul.button-list > li > button.loading i {
+#upload-program {
+    border-radius: 16px;
+    transform: scale(2) translateY(-32px);
+    box-shadow: none;
+    padding: 6px;
+    padding-bottom: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#upload-program img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+#upload-program.loading i {
     animation: goOutToTop 1.6s;
     transform: translateY(-300%);
 }
 
-.page > .main > footer > .control-box > ul.button-list > li > button.loading::before {
+#upload-program.loading::before {
     content: '';
     width: 100%;
     height: 100%;
@@ -414,10 +438,6 @@ ul.switch-mode > li:last-child {
     }
 }
 
-.page > .main > footer > .control-box > ul.button-list > li > button.zoom {
-    transform: scale(2) translateY(-20px);
-    box-shadow: 0 0 6px rgb(0 0 0 / 60%);
-}
 
 .page > .main > footer > .status-bar {
     display: flex;
@@ -614,7 +634,7 @@ ul.switch-mode > li:last-child {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #F1C40F;
+    background-color: #194C66;
     border-radius: 10px 10px 0 0;
     box-shadow: 0 10px 10px -8px rgb(0 0 0 / 26%);
     z-index: 999999;
@@ -636,7 +656,7 @@ ul.switch-mode > li:last-child {
 .dialog > header > .icon > button {
     padding: 0 20px;
     height: 100%;
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
     border: none;
     outline: none;
@@ -739,7 +759,7 @@ ul.switch-mode > li:last-child {
 }
 
 .add-extension-box button {
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
     padding: 10px 12px;
     border: none;
@@ -772,7 +792,7 @@ ul.switch-mode > li:last-child {
     outline: none;
     text-align: center;
     transition: border 300mS, width 300mS;
-    border: 2px solid #F1C40F;
+    border: 2px solid #194C66;
     width: 140px;
 }
 
@@ -817,7 +837,7 @@ ul.switch-mode > li:last-child {
 }
 
 .extension-category-list > li.active {
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
 }
 
@@ -911,7 +931,7 @@ ul.switch-mode > li:last-child {
 
 .extension-box > .header > .detail > .name {
     font-size: 18px;
-    color: #212F3C;
+    color: #194C66;
     font-weight: bold;
     margin-bottom: 4px;
 }
@@ -953,7 +973,7 @@ ul.switch-mode > li:last-child {
 }
 
 .extension-box > .description {
-    color: #212F3C;
+    color: #194C66;
     padding: 10px;
     font-size: 14px;
 }
@@ -969,7 +989,7 @@ ul.switch-mode > li:last-child {
     background-color: #FBFCFC;
     border: #ECF0F1 1px solid;
     padding: 6px;
-    color: #212F3C;
+    color: #194C66;
     outline: none;
     cursor: pointer;
 }
@@ -1078,7 +1098,7 @@ ul.switch-mode > li:last-child {
 }
 
 #github-dialog > section > header > ul > li.active {
-    border-bottom: 3px solid #F1C40F;
+    border-bottom: 3px solid #194C66;
 }
 
 #github-dialog > section > section > ul {
@@ -1099,7 +1119,7 @@ ul.switch-mode > li:last-child {
 }
 
 #github-dialog > section > section > ul > li.active {
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
 }
 
@@ -1143,7 +1163,7 @@ ul.switch-mode > li:last-child {
 }
 
 #github-dialog > section > section .control-button > button {
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
     border: none;
     border-radius: 4px;
@@ -1229,7 +1249,7 @@ ul.switch-mode > li:last-child {
 }
 
 #port-select-dialog > section > section > ul > li.active {
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
 }
 
@@ -1239,7 +1259,7 @@ ul.switch-mode > li:last-child {
 }
 
 #port-select-dialog > section > section > .control-button > button {
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
     border: none;
     border-radius: 4px;
@@ -1333,7 +1353,7 @@ ul.switch-mode > li:last-child {
 }
 
 #project-create-dialog > section button {
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
     border: none;
     border-radius: 4px;
@@ -1375,7 +1395,7 @@ ul.switch-mode > li:last-child {
 }
 
 .image-select > ul > li > div.active {
-    border: 3px solid #F1C40F;
+    border: 3px solid #194C66;
 }
 
 .image-select > ul > li > div > .image {
@@ -1537,7 +1557,7 @@ ul.switch-mode > li:last-child {
     display: inline-block;
     margin: auto;
 
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
     border: none;
     border-radius: 4px;
@@ -1556,7 +1576,7 @@ ul.switch-mode > li:last-child {
 }
 
 #firmware-upgrade-dialog  > section > section > article button:disabled:hover {
-    background-color: #F1C40F;
+    background-color: #194C66;
 }
 
 #firmware-upgrade-dialog  > section > section > article button#continue-upload {
@@ -1574,7 +1594,7 @@ ul.switch-mode > li:last-child {
 }
 
 #firmware-upgrade-dialog  > section > section > article.todo > .icon {
-    color: #F1C40F;
+    color: #194C66;
 }
 
 #firmware-upgrade-dialog  > section > section > article.doing > .icon.loading {
@@ -1786,7 +1806,7 @@ ul.switch-mode > li:last-child {
 }
 
 .example-list > ul > li.active > a {
-    background-color: #F1C40F;
+    background-color: #194C66;
     color: #FFF;
 }
 
@@ -1848,10 +1868,11 @@ ul.switch-mode > li:last-child {
     /* width: 100px; */
     width: 100%;
     margin-bottom: 0px !important;
+    background-color: #F2D388;
 }
 
 .blocklyTreeRow.blocklyTreeSelected {
-    background-color: #ECF0F1 !important;
+    background-color: #F2D388 !important;
 }
 
 .blocklyTreeRow > .blocklyTreeIcon {
@@ -1863,24 +1884,6 @@ ul.switch-mode > li:last-child {
     height: auto !important;
     padding: 6px;
     padding-top: 10px;
-}
-
-.blocklyTreeRow > .blocklyTreeIcon > img {
-    width: 60%;
-}
-
-.blocklyTreeRow > .blocklyTreeLabel {
-    display: block !important;
-    text-align: center;
-    padding: 6px;
-    padding-bottom: 10px;
-    padding-top: 0;
-    color: #1C2833 !important;
-    font-size: 14px;
-}
-
-.blocklyTreeSelected .blocklyTreeLabel {
-    color: #1C2833 !important;
 }
 
 .blocklyFlyoutLabelText {
