--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     justify-content: center;
     text-align: center;
     z-index: 99999;
-    background-color: #FFF;
+    background-color: #194C66;
 }
 
 #full-loading > .box > img {
@@ -42,7 +42,7 @@ body {
 
 #full-loading > .box > .label {
     font-size: 36px;
-    color: #194C66;
+    color: #FFF;
     font-weight: bold;
 }
 
@@ -82,9 +82,20 @@ body {
 
 .header-logo {
     font-size: 24px;
-    font-weight: bold;
     color: #FFF;
     padding: 20px 30px;
+    display: flex;
+    align-items: center;
+}
+
+.header-logo > img {
+    width: auto;
+    height: 26px;
+    margin-right: 8px;
+}
+
+.header-logo > span {
+    text-shadow: 2px 2px 8px #000000;
 }
 
 .embed .header-logo {
@@ -396,19 +407,23 @@ ul.switch-mode > li:last-child {
     display: block;
 }
 
-#upload-program.loading i {
+#upload-program.loading {
+    overflow: hidden;
+}
+
+#upload-program.loading img {
     animation: goOutToTop 1.6s;
     transform: translateY(-300%);
 }
 
 #upload-program.loading::before {
     content: '';
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     display: block;
     position: absolute;
-    top: -3px;
-    left: -3px;
+    top: calc(10% - 3px);
+    left: calc(10% - 3px);
     border-radius: 500px;
     border: 3px solid transparent;
     border-top-color: #85929E;
