--- a/css/simulator.css
+++ b/css/simulator.css
@@ -11,7 +11,7 @@
 }
 
 #simulator > header {
-    background-color: #7F8C8D;
+    background-color: #4b7894;
     position: relative;
     width: 100%;
 }
@@ -39,12 +39,12 @@
     height: 36px;
     font-size: 16px;
     outline: none;
-    color: #FFF;
-    background-color: #616A6B;
+    color: #4b7894;
+    background-color: #FFF;
 }
 
 #simulator > header > .icon > button:hover {
-    background-color: #515A5A;
+    background-color: #e4e4e4;
 }
 
 #simulator > header > .icon > button > i {
