--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Inria Sans';
 }
 
 img {
@@ -15,7 +16,7 @@ html, body {
 }
 
 body {
-    font-family: 'Inria Sans';
+    
     color: #194C66;
     user-select: none;
 }
@@ -2119,4 +2120,134 @@ ul.switch-mode > li:last-child {
 
 .tippy-box {
     background-color: rgba(0, 0, 0, 0) !important;
+}
+
+
+/* Auth */
+#sign-in {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 89999;
+    
+    background-image: url("../images/sign-in-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#sign-in img {
+    max-width: 100%;
+    height: auto;
+}
+
+#sign-in > .box {
+    max-width: 600px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#sign-in > .box > .logo {
+    text-align: center;
+    margin-right: 20px;
+}
+
+#sign-in > .box > .form-box {
+    text-align: center;
+    width: 260px;
+}
+
+#sign-in-error-box {
+    border-radius: 6px;
+    background-color: #FF0000;
+    color: #FFF;
+    font-size: 16;
+    padding: 8px 16px;
+    text-align: left;
+}
+
+#sign-in > .box > .form-box > * {
+    display: block;
+    margin-bottom: 16px;
+    width: 100%;
+    font-size: 16px;
+    transition: all 300mS;
+}
+
+#sign-in > .box > .form-box > input {
+    padding: 10px;
+    border: none;
+    text-align: center;
+    outline: none;
+    border-radius: 9999px;
+}
+
+#sign-in > .box > .form-box > .sign-in-submit-btn {
+    border: none;
+    outline: none;
+    width: 100%;
+    border-radius: 99999px;
+    background-color: #4b7894;
+    box-shadow: 4px 4px 12px rgb(0 0 0 / 34%);
+    color: #FFF;
+    padding: 10px;
+}
+
+#sign-in > .box > .form-box > .sign-in-submit-btn:hover {
+    background-color: #3a5d72;
+    cursor: pointer;
+}
+
+/* Customize the label (the container) */
+#sign-in>.box>.form-box>.container {
+    text-align: left;
+    color: #FFF;
+    display: block;
+    position: relative;
+    padding-left: 30px;
+    cursor: pointer;
+    font-size: 14px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+#sign-in>.box>.form-box>.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+#sign-in>.box>.form-box>.container .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #FFF;
+    border-radius: 9999px;
+    border: 4px solid #FFF;
+}
+
+/* On mouse-over, add a grey background color */
+#sign-in>.box>.form-box>.container:hover input~.checkmark {
+    background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+#sign-in>.box>.form-box>.container input:checked~.checkmark {
+    background-color: #194C66;
 }
